2003-03-04  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Updated for recent changes.
        * English.lproj/Localizable.strings: Regenerated.

2003-03-03  Richard Williamson   <rjw@apple.com>

        Switch all WebController's delegate to use informal protocols.
        
        Reviewed by trey.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView status:]):
        * Plugins.subproj/WebNetscapePluginDocumentView.m:
        (-[WebNetscapePluginDocumentView setDataSource:]):
        * Plugins.subproj/WebNullPluginView.m:
        (-[WebNullPluginView viewDidMoveToWindow]):
        * Plugins.subproj/WebPluginController.m:
        (-[WebPluginController showStatus:]):
        * WebCoreSupport.subproj/WebBridge.h:
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge createWindowWithURL:frameName:]):
        (-[WebBridge showWindow]):
        (-[WebBridge areToolbarsVisible]):
        (-[WebBridge setToolbarsVisible:]):
        (-[WebBridge isStatusBarVisible]):
        (-[WebBridge setStatusBarVisible:]):
        (-[WebBridge setWindowFrame:]):
        (-[WebBridge setStatusText:]):
        (-[WebBridge objectLoadedFromCacheWithURL:response:size:]):
        (-[WebBridge setWebFrame:]):
        * WebKit.exp:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate resourceLoadDelegate]):
        (-[WebBaseResourceHandleDelegate downloadDelegate]):
        (-[WebBaseResourceHandleDelegate resource:willSendRequest:]):
        (-[WebBaseResourceHandleDelegate resource:didReceiveResponse:]):
        (-[WebBaseResourceHandleDelegate resource:didReceiveData:]):
        (-[WebBaseResourceHandleDelegate resourceDidFinishLoading:]):
        (-[WebBaseResourceHandleDelegate resource:didFailLoadingWithError:]):